# napari-aydin

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_aydin/: _dock_widget.py  _function.py
src/napari_aydin/_tests/: test_dock_widget.py  test_function.py
