[metadata]
name = napari-aydin

author = Ahmet Can Solak
author_email = ahmetcan.solak@czbiohub.org
url = https://github.com/royerlab/napari-aydin.git
license = BSD-3-Clause
description = Aydin — User-friendly, Fast, Self-Supervised and Unsupervised Image Denoising for All. 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.9
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    aydin

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-aydin = napari_aydin
